# lris2

./: .gitignore  .gitmodules  README.md  delete.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: integration.yml  update-submodules.yml
gui/demo/maskgui/: bar.py  main.py  styles.qss
gui/slitmaskgui/: slit_position_table.py  target_list_widget.py
gui/slitmaskgui/backend/: sample.py
gui/slitmaskgui/configure_mode/: csu_worker.py
gui/slitmaskgui/mask_widgets/: waveband_view.py
gui/slitmaskgui/tests/: test_offline_mode.py
l2cryocooler/scripts/: read_accelerometer_raw_fft.py  requirements.txt
lris2-mascgen/: README.md  config.yaml  example.ipynb  pyproject.toml
lris2-mascgen/lris2_mascgen/: magma_algorithm.py  slit.py  utils.py
scripts/cryocooler_vibration_measurements/: Install.md  read_accelerometer_raw_fft.py
scripts/cryocooler_vibration_measurements/output_sunpower/output_40W/: fft_data_075442.csv  fft_data_081889.csv
scripts/cryocooler_vibration_measurements/output_sunpower/output_50W/: fft_data_075442.csv
slitmaskgui/: app.py  connection_checkers.py  dark_mode.qss  input_targets.py  interactive_slit_mask.py  light_mode.qss  mask_configurations.py  mask_gen_widget.py  mask_view_tab_bar.py  mask_viewer.py  menu_bar.py  offline_mode.py  requirements.txt  sky_viewer.py  slit_position_table.py  styles.qss  target_list_widget.py
slitmaskgui/backend/: input_targets.py  mask_gen.py  sample.py  star_list.py
slitmaskgui/configure_mode/: csu_display_widget.py  csu_worker.py  mask_controller.py  mode_toggle_button.py
slitmaskgui/mask_widgets/: mask_objects.py  mask_view_tab_bar.py  sky_viewer.py  slitmask_view.py  waveband_view.py
slitmaskgui/tests/: test_input_targets.py  test_mask_configurations.py  test_mask_gen.py  test_offline_mode.py  test_star_list.py  test_target_list_widget.py
slitmaskgui/tests/testfiles/: gaia_target_list.json
src/: __init__.py
src/driver/: __init__.py
src/gui/: __init__.py
src/gui/slitmaskgui/: requirements.txt
tests/gui/slitmaskgui/: test_input_targets.py  test_slit_position_table.py
(+11 files in other folders)
