[build-system]
# Specifies the build system to use.
requires = ["setuptools>=44"]
build-backend = "setuptools.build_meta"

[project]
# Basic information about your project.
name = "lris2-mascgen"
version = "0.1.0"
dependencies = [
    "astropy",
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
    "notebook",
    "numba",
    "multiprocess"
]
requires-python = ">=3.9"
authors = [
  { name = "Yashvi Sharma", email = "yssharma@caltech.edu" }
]
maintainers = [
  { name = "Yashvi Sharma", email = "yssharma@caltech.edu" }
]
description = "LRIS2 CSU mask design software"
readme = "README.md"
license = { text = "MIT" }
keywords = ["example", "package", "keywords"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
# Various URLs related to your project. These links are displayed on PyPI.
Repository = "https://github.com/CaltechOpticalObservatories/lris2/lris2-mascgen"
"Bug Tracker" = "https://github.com/CaltechOpticalObservatories/lris2/issues"

[project.optional-dependencies]
# Optional dependencies that can be installed with extra tags, like "dev".
dev = [
  "pytest",
  "black",
  "flake8"
]

[tool.setuptools]
packages = { find = { include = ["lris2_mascgen"] } }